--- a/src/KnightsChallenge.WebApi/Properties/launchSettings.json
+++ b/src/KnightsChallenge.WebApi/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       "applicationUrl": "http://localhost:5235",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "MONGO_DB_CONNECTION_URI": "mongodb://username:password@localhost:27017?authSource=admin",
+        "MONGO_DB_CONNECTION_URI": "mongodb://username:password@localhost:27017/",
         "MONGO_DB_CONNECTION_DATABASE": "knightsservice",
         "RABBITMQ_HOSTNAME": "localhost",
         "RABBITMQ_USERNAME": "guest",
