--- a/docker-compose-deps/nginx/nginx.conf
+++ b/docker-compose-deps/nginx/nginx.conf
@@ -1,14 +1,18 @@
-events {
-    worker_connections: 1000;
+worker_processes 4;
+
+events { 
+    worker_connections 1024; 
 }
 
 http {
     server {
-        listen       3000;
-        server_name  localhost;
-        
+        listen 80;
+        root  /usr/share/nginx/html;
+        include /etc/nginx/mime.types;
+
         location / {
-          try_files $uri $uri/ /index.html;
+            root  /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
         }
     }
 }
